// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should create channel, set topic and invite author and reviewers on PR opened 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [
    {
      "is_private": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.author@test.com,test.reviewer1@test.com",
    },
  ],
  "lookedUpUsers": [
    {
      "email": "test.author@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [
    {
      "channel": "12345",
      "text": "The pull request was opened by Test Author. Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
    },
  ],
  "setChannelTopics": [
    {
      "channel": "12345",
      "topic": ":git: Pull request: *Quite a long and comprehensive description to get channel title longer than 250 symbols which is a maximum length for the Slack* | :git-branch: To branch: *TEST-PROJ/test-repository:master*",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR declining 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was declined by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR deletion 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was deleted by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR merge 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was merged by Test Author. Well done, thank you all.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR commented 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "*Test Reviewer* <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|commented>: Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "*Test Reviewer* <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|commented>: Test comment",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR commit 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment for TEST-PROJ, test-repository, from-ref-commit-hash",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author. Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
    },
  ],
  "setChannelTopics": [],
}
`;
